samples/_failures_safe/1761287015_011b1f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1abbe9ae.c: In function ‘main’:
./samples/SAFE/__tmp_1abbe9ae.c:161:64: error: missing terminating " character
  161 |     printf("%-12s %-15s %-6s %-6s\n", "TYPE", "VALUE", "LINE", "
      |                                                                ^
./samples/SAFE/__tmp_1abbe9ae.c:161:5: error: expected expression at end of input
  161 |     printf("%-12s %-15s %-6s %-6s\n", "TYPE", "VALUE", "LINE", "
      |     ^~~~~~
./samples/SAFE/__tmp_1abbe9ae.c:161:5: error: expected declaration or statement at end of input
